fix mobile overlap & scroll issues

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -50,7 +50,7 @@
   html,
   body {
     @apply m-0 p-0 font-serif;
-    @apply pointer-events-none select-none;
+    @apply select-none;
 
     font-size: 15px;
     font-family: Helvetica, Arial, sans-serif;
